# k8s-mcp-assistant

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/k8s_cmp_assistant/: config.py
src/k8s_cmp_assistant/kubernetes/: client.py  pods.py
src/k8s_mcp_assistant/: config.py  models.py  server.py
src/k8s_mcp_assistant/kubernetes/: __ini__.py  __init__.py  client.py  cluster.py  deployments.py  events.py  pods.py  services.py  workloads.py
tests/: test_cluster.py  test_config.py  test_deployments.py  test_events.py  test_pods.py  test_services.py  test_workloads.py
