[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-mcp-assistant"
version = "0.1.0"
description = "A read-only Kubernetes MCP server for cluster inspection and diagnostics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "John Itopa ISAH"}
]
dependencies = [
  "kubernetes>=30.1.0",
  "mcp>=1.7.1",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-mock>=3.14.0",
  "mypy>=1.11.0",
  "black>=24.8.0",
  "ruff>=0.6.4"
]

[project.scripts]
k8s-mcp-assistant = "k8s_mcp_assistant.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = ["py311"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
